<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titlep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_servicios"
        android:textAlignment="center"
        android:fontFamily="@font/font1"
        android:textSize="50dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgs1"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:src="@drawable/moto" />

                <TextView
                    android:id="@+id/tvnNameS1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font3"
                    android:textSize="25dp"
                    android:text="@string/nameS1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgs2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:src="@drawable/carro" />

                <TextView
                    android:id="@+id/tvnNameS2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font3"
                    android:textSize="25dp"
                    android:text="@string/nameS2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgs3"
                    android:layout_width="220dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:src="@drawable/camion" />

                <TextView
                    android:id="@+id/tvnNameS3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font3"
                    android:textSize="25dp"
                    android:text="@string/nameS3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgs4"
                    android:layout_width="155dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:src="@drawable/avion2" />

                <TextView
                    android:id="@+id/tvnNameS4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font3"
                    android:text="@string/nameS4"
                    android:textSize="25dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>